--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="src/person.js"></script>
     <script src="src/bmi_calculator.js"></script>
     <script src='https://code.jquery.com/jquery-2.1.4.js'></script>
+    <script>
+    $.holdReady(true);
+    </script>
     <script type="text/javascript">
   $(document).ready(function () {
     $('#calculate').click(function () {
