--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="src/person.js"></script>
     <script src="src/bmi_calculator.js"></script>
     <script src='https://code.jquery.com/jquery-2.1.4.js'></script>
@@ -14,21 +16,31 @@
           var person = new Person({weight: w, height: h});
           person.calculate_bmi();
           $('#display_value').html('Your BMI is ' + person.bmiValue);
-          $('#display_message').html('and you are '+ person.bmiMessage);
+          $('#display_message').html('and your status is '+ person.bmiMessage);
         });
       });
     </script>
   </head>
-  <body>
-    <form>
-      <input type="text" id="weight" placeholder="Weight">
-      <input type="text" id="height" placeholder="Height">
-      <input type="button" id="calculate" value="Calculate">
-    </form>
-    <div>
-      <span id="display_value"></span>
-      <span id="display_message"></span>
+  <body class="container">
 
-    </div>
-  </body>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <input class="form-control input-lg" type="text" id="weight" placeholder="Weight (KG)">
+            <input class="form-control input-lg" type="text" id="height" placeholder="Height (CM)">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <button type="button" id="calculate" class="btn btn-success btn-lg btn-block">Calculate</button>
+        </div>
+      </div>
+      <BR>&nbsp;<BR>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <span id="display_value"></span>
+          <span id="display_message"></span>
+        </div>
+      </div>
+    </body>
 </html>
