--- a/index.html
+++ b/index.html
@@ -9,18 +9,7 @@
     <script src="src/person.js"></script>
     <script src="src/bmi_calculator.js"></script>
     <script src='https://code.jquery.com/jquery-2.1.4.js'></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#calculate').click(function () {
-          var w = parseFloat($('#weight').val());
-          var h = parseFloat($('#height').val());
-          var person = new Person({weight: w, height: h});
-          person.calculate_bmi();
-          $('#display_value').html('Your BMI is ' + person.bmiValue);
-          $('#display_message').html('and your status is '+ person.bmiMessage);
-        });
-      });
-    </script>
+    <script src="src/calculate.js"></script>
   </head>
   <body class="container">
     <div class="row">
