--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="src/bmi_calculator.js"></script>
     <script src='https://code.jquery.com/jquery-2.1.4.js'></script>
     <script src="src/calculate.js"></script>
+    <script src="src/placeholder.js"></script>
   </head>
   <body class="container">
     <div class="row">
