Fixed unit-switcher button and placeholder script

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Calculate your Body Mass Index</h2>
-        <div class="form-group"><p>Do you wish to use Imperial units?</p></div>
+        <div><p>Do you wish to use Imperial units?</p></div>
         <div class="onoffswitch">
           <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
           <label class="onoffswitch-label" for="myonoffswitch">
