Refactored and cleaned code

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Calculate your Body Mass Index</h2>
-        <div><p>Do you wish to use Imperial units?</p></div>
-        <div class="onoffswitch">
-          <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
-          <label class="onoffswitch-label" for="myonoffswitch">
-            <span class="onoffswitch-inner"></span>
-            <span class="onoffswitch-switch"></span>
-          </label>
+        <div><p>Do you wish to use Imperial units?</p>
+          <div class="onoffswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
+            <label class="onoffswitch-label" for="myonoffswitch">
+              <span class="onoffswitch-inner"></span>
+              <span class="onoffswitch-switch"></span>
+            </label>
+          </div>
         </div>
       </div>
     </div>
